--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8" />
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        	<link rel="stylesheet" href="{{asset('css/bootstrap.css')}}" />
+        <title>{% block titre %}Ecommerce Fruits & Legumes!{% endblock %}</title>
+        <meta name="keywords" content="{% block motsCles %}{% endblock %}">
+        <meta name="description" content="{% block description %}{% endblock %}">
+            <link rel="stylesheet" href="{{asset('css/bootstrap.css')}}" />
             <link rel="stylesheet" href="{{asset('css/bootstrap-responsive.css')}}" />
             <link rel="stylesheet" href="{{asset('css/style.css')}}" />
             <link rel="stylesheet" href="{{'css/font-awesome.css'}}" />
