--- a/src/AppBundle/Resources/views/Panier/panier.html.twig
+++ b/src/AppBundle/Resources/views/Panier/panier.html.twig
@@ -55,7 +55,7 @@
                 </dl>
                 <div class="clearfix"></div>
                 <a href="{{path('livraison')}}" class="btn btn-success pull-right">Valider mon panier</a>
-                <a href="{{path('nosproduist')}}" class="btn btn-primary">Continuer mes achats</a>
+                <a href="{{path('nosproduits')}}" class="btn btn-primary">Continuer mes achats</a>
             </div>
 		
 		</div>
