--- a/src/AppBundle/Resources/views/Produit/detail.html.twig
+++ b/src/AppBundle/Resources/views/Produit/detail.html.twig
@@ -6,6 +6,11 @@
 		<div class="row">
             <div class="span3">
                 {% include '::navigation.html.twig' %}
+                {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+                    {% include 'AppBundle:Utilisateur:utilisateurConnecte.html.twig' %}
+                {% else %}
+                    {% include 'AppBundle:Utilisateur:utilisateur.html.twig' %}
+                {% endif %}
             </div>    
 			<div class="span9">
 				<div class="row">
