--- a/src/AppBundle/Resources/views/Produit/index.html.twig
+++ b/src/AppBundle/Resources/views/Produit/index.html.twig
@@ -5,22 +5,17 @@
     <div class="row">
        <div class="span3">
        {% include '::navigation.html.twig' %}
-       {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-           {% include 'AppBundle:Utilisateur:utilisateurConnecte.html.twig' %}
-       {% else %}
-           {% include 'AppBundle:Utilisateur:utilisateur.html.twig' %}
-       {% endif %}
        </div>    
         <div class="span9">
             <ul class="thumbnails">
-             {% for produit in produits %}
+             {% for i in 0..10 %}
                 <li class="span3">
                     <div class="thumbnail">
-                        <img src="{{produit.image.path}}" alt="{{produit.categorie.image.alt}}" width="200" height="150">
+                        <img src="{{asset('bundles/app/img/holder.png')}}" alt="DevAndClick" width="300" height="300">
                         <div class="caption">
-                            <h4>{{produit.nom}}</h4>
-                            <p>{{produit.prix|tva(produit.tva.multiplicate)}}</p>
-                            <a class="btn btn-primary" href="{{path('detail_produit', {'id':produit.id})}}">Plus d'infos</a>
+                            <h4>Thumbnail label</h4>
+                            <p>100,00 €</p>
+                            <a class="btn btn-primary" href="{{path('detail_produit')}}">Plus d'infos</a>
                             <a class="btn btn-success" href="panier.php">Ajouter au panier</a>
                         </div>
                     </div>
@@ -43,5 +38,4 @@
         </div>
     </div>
 </div>
-<?php include '../layout/footer.php'; ?>
 {% endblock %}
